--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.1.0",
+    "@sanity/image-url": "^1.0.2",
+    "framer-motion": "^11.3.23",
     "next": "14.2.5",
+    "next-sanity": "^9.4.3",
     "react": "^18",
     "react-dom": "^18"
   },
