--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.16.8",
     "@sanity/image-url": "^1.0.2",
+    "@types/three": "^0.167.1",
     "framer-motion": "^11.3.23",
     "next": "14.2.5",
     "next-sanity": "^9.4.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/node": "^20",
