--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@portabletext/react": "^3.1.0",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "@sanity/image-url": "^1.0.2",
     "@types/three": "^0.167.1",
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^11.3.23",
     "next": "14.2.5",
     "next-sanity": "^9.4.3",
