--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/three": "^0.167.1",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^11.3.23",
-    "next": "14.2.5",
+    "next": "^14.2.20",
     "next-sanity": "^9.4.3",
     "react": "^18",
     "react-dom": "^18",
@@ -28,7 +28,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
