--- a/sanity/package.json
+++ b/sanity/package.json
@@ -19,6 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.52.4",
+    "sanity-plugin-mux-input": "^2.4.0",
+    "sanity-plugin-vimeo-field": "^1.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
