--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mux/mux-player-react": "^3.2.1",
     "@portabletext/react": "^3.1.0",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.16.8",
@@ -16,6 +17,7 @@
     "@sanity/image-url": "^1.0.2",
     "@types/three": "^0.167.1",
     "@use-gesture/react": "^10.3.1",
+    "@xyflow/react": "^12.3.6",
     "framer-motion": "^11.3.23",
     "next": "^14.2.20",
     "next-sanity": "^9.4.3",
