--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "react/display-name":"off",
-    "react-hooks/rules-of-hooks":"off"
+    "react-hooks/rules-of-hooks":"off",
+    "@typescript-eslint/ban-ts-comment":"off"
   }
 }
