--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@use-gesture/react": "^10.3.1",
     "@xyflow/react": "^12.3.6",
     "framer-motion": "^11.3.23",
+    "lenis": "^1.1.18",
     "next": "^14.2.20",
     "next-sanity": "^9.4.3",
     "react": "^18",
