--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mux/blurup": "^1.0.1",
     "@mux/mux-player-react": "^3.2.1",
     "@portabletext/react": "^3.1.0",
     "@react-three/drei": "^9.109.5",
