--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@mux/blurup": "^1.0.1",
     "@mux/mux-player-react": "^3.2.1",
     "@portabletext/react": "^3.1.0",
-    "@react-three/drei": "^9.109.5",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@sanity/image-url": "^1.0.2",
     "@types/three": "^0.167.1",
     "@use-gesture/react": "^10.3.1",
@@ -22,21 +22,21 @@
     "framer-motion": "^11.3.23",
     "lenis": "^1.1.18",
     "motion": "^12.14.0",
-    "next": "^14.2.20",
-    "next-sanity": "^9.11.1",
+    "next": "^16.1.6",
+    "next-sanity": "^12.0.16",
     "raw-loader": "^4.0.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "resend": "^4.0.0",
-    "sanity-plugin-simpler-color-input": "^3.0.1",
-    "three": "^0.167.1"
+    "sanity-plugin-simpler-color-input": "^4.0.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
