--- a/sanity/package.json
+++ b/sanity/package.json
@@ -16,12 +16,13 @@
   ],
   "dependencies": {
     "@sanity/color-input": "^4.0.3",
-    "@sanity/orderable-document-list": "^1.3.3",
+    "@sanity/orderable-document-list": "^1.5.0",
     "@sanity/vision": "^3.82.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanity": "^3.82.0",
-    "sanity-plugin-mux-input": "^2.4.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "sanity": "^5.10.0",
+    "sanity-plugin-mux-input": "^2.14.0",
+    "style-components": "^0.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
